tests/src/frontend/syntax/invalid/mistake_let_match.sk
fun main(): String {
  x match {
  | A
  | B -> x
  | C
  | D ->
    f();
    let myint = 10;    
  }
}
